GNOME Bugzilla – Bug 765122
Duplicate/missing string in gtkprintbackendcups
Last modified: 2016-04-19 11:36:31 UTC
Commit https://git.gnome.org/browse/gtk+/commit/?h=gtk-3-20&id=830626596b5325c836eeb4760ea47cfada9baad2 changed "Printer “%s” is out of developer." to a duplicate of "Printer “%s” is low on developer.", so now there are two of the latter: https://git.gnome.org/browse/gtk+/tree/modules/printbackends/cups/gtkprintbackendcups.c?h=gtk-3-20&id=830626596b5325c836eeb4760ea47cfada9baad2#n2507
Created attachment 326159 [details] [review] cups: Fix duplicate string This should fix it. Please check if I changed the correct string.
Attachment 326159 [details] pushed as 3fe08b3 - cups: Fix duplicate string