cups: Fix duplicate string

https://bugzilla.gnome.org/show_bug.cgi?id=765122